--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family:'Gill Sans'
 }
 
 a{
@@ -29,4 +29,39 @@ a{
 
 .fa-envelope{
     margin-right: 5px;
+}
+
+/* プロファイル */
+.profile_wrapper{
+    text-align: center;
+}
+
+.heading{
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+
+.heading h2{
+    font-weight: normal;
+}
+
+.profiles{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.profile{
+    width: 30%;
+    text-align: center;
+}
+
+.profile_icon img{
+    width: 100%;
+    object-fit: cover;
+}
+
+/* メディアクエリ */
+@media(mac-width: 670px){
+
 }
