--- a/index.css
+++ b/index.css
@@ -1,108 +1,124 @@
-body{
-    margin: 0;
-    padding: 0;
-    font-family:'Gill Sans'
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  font-family: "Gill Sans";
 }
 
-a{
-    text-decoration: none;
-    color: black;
+a {
+  text-decoration: none;
+  color: black;
 }
 
-.top-wrapper{
-    padding: 100px 0 100px 0;
-    background: 
-        linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), 
-        url('header_image.jpg');
-    background-size: cover;
-    text-align: center;
+.top-wrapper {
+  padding: 100px 0 100px 0;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.7),
+      rgba(255, 255, 255, 0.7)
+    ),
+    url("header_image.jpg");
+  background-size: cover;
+  text-align: center;
 }
 
-.github{
-    margin-right: 10px;
-    opacity: 0.8;
+.github {
+  margin-right: 10px;
+  opacity: 0.8;
 }
 
-.github:hover{
-    opacity: 1;
+.github:hover {
+  opacity: 1;
 }
 
-.fa-envelope{
-    margin-right: 5px;
+.fa-envelope {
+  margin-right: 5px;
 }
 
 /* プロファイル */
-.profile_wrapper{
-    text-align: center;
+.profile_wrapper {
+  text-align: center;
 }
 
-.heading{
-    padding-top: 80px;
-    padding-bottom: 50px;
+.heading {
+  padding-top: 80px;
+  padding-bottom: 50px;
 }
 
-.heading h2{
-    font-weight: normal;
+.heading h2 {
+  font-weight: normal;
 }
 
-.profiles{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: 90%;
-    margin: 0 auto;
+.profiles {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 90%;
+  margin: 0 auto;
 }
 
-.profile{
-    width: 30%;
-    text-align: center;
+.profile {
+  width: 30%;
+  text-align: center;
 }
 
-.profile h3{
-    font-weight: normal;
+.profile h3 {
+  font-weight: normal;
 }
 
-.text-contents{
-    font-size: 14px;
+.text-contents {
+  font-size: 14px;
 }
 
-.profile_icon img{
-    width: 100%;
-    object-fit: cover;
+.profile_icon img {
+  width: 100%;
+  object-fit: cover;
 }
 
-.message-wrapper{
-    background-color: #575757;
-    text-align: center;
-    padding-bottom: 50px;
+.message-wrapper {
+  background-color: #575757;
+  text-align: center;
+  padding-bottom: 50px;
 }
 
-.btn{
-    padding: 8px 24px;
-    display: inline-block;
-    opacity: 0.8;
-    border-radius: 4px;
+.btn {
+  padding: 8px 24px;
+  display: inline-block;
+  opacity: 0.8;
+  border-radius: 4px;
 }
 
-.message{
-    padding: 15px 40px;
-    background-color: #fff;
-    box-shadow: 0 7px #7d7d7d;
+.message {
+  padding: 15px 40px;
+  background-color: #fff;
+  box-shadow: 0 7px #7d7d7d;
 }
 
 .message:active {
-    position: relative;
-    top: 7px;
-    box-shadow: none;
+  position: relative;
+  top: 7px;
+  box-shadow: none;
 }
 
-footer{
-    padding-top: 30px;
-    display: flex;
-    justify-content: center;
+.footer {
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding: 30px 0;
+}
+
+.footer-item {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.copyright {
+  color: #fff;
+  font-size: 14px;
 }
 
 /* メディアクエリ */
-@media(mac-width: 670px){
-
+@media (max-width: 670px) {
 }
