[remove] Gill Sansを取り除きました

--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
-* {
+*,
+*::before,
+*::after 
+{
   margin: 0;
   padding: 0;
-  font-family: "Gill Sans";
+  /* font-family: "Gill Sans"; */
 }
 
 a {
@@ -38,11 +41,6 @@ a {
   text-align: center;
 }
 
-.profile_wrapper h3 {
-  font-weight: normal;
-  padding: 20px 0;
-}
-
 .heading {
   padding-top: 80px;
   padding-bottom: 50px;
@@ -58,7 +56,7 @@ a {
   flex-wrap: wrap;
   width: 90%;
   margin: 0 auto;
-  padding-bottom: 80px;
+  padding-bottom: 50px;
 }
 
 .profile {
@@ -82,7 +80,7 @@ a {
 .message-wrapper {
   background-color: #575757;
   text-align: center;
-  padding-bottom: 80px;
+  padding-bottom: 50px;
 }
 
 .btn {
