[edit] soyasan edited

--- a/index.css
+++ b/index.css
@@ -1,10 +1,8 @@
 *,
 *::before,
-*::after 
-{
+*::after {
   margin: 0;
   padding: 0;
-  /* font-family: "Gill Sans"; */
 }
 
 a {
@@ -37,13 +35,15 @@ a {
 }
 
 /* プロファイル */
-.profile_wrapper {
+.section_wrapper {
+  padding: 80px 0;
   text-align: center;
 }
 
-.heading {
-  padding-top: 80px;
-  padding-bottom: 50px;
+.section_wrapper_inner {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .heading h2 {
@@ -54,14 +54,25 @@ a {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  width: 90%;
-  margin: 0 auto;
-  padding-bottom: 50px;
+  gap: 40px;
+}
+
+@media (min-width: 768px) {
+  .profiles {
+    flex-wrap: nowrap;
+  }
 }
 
 .profile {
-  width: 30%;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+@media (min-width: 768px) {
+  .profile {
+    flex: 1;
+  }
 }
 
 .profile h3 {
@@ -77,10 +88,18 @@ a {
   object-fit: cover;
 }
 
-.message-wrapper {
+.profile_text {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.message_wrapper {
   background-color: #575757;
-  text-align: center;
-  padding-bottom: 50px;
+  color: #fff;
+}
+.text-contents {
+  text-align: left;
 }
 
 .btn {
@@ -116,20 +135,28 @@ a {
   gap: 12px;
 }
 
+.container {
+  margin: 0 auto;
+  max-width: 1024px;
+  width: 90%;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 100%;
+  }
+}
+
 .copyright {
   color: #fff;
   font-size: 14px;
 }
 
-/* メディアクエリ */
-@media (max-width: 670px) {
-  .profiles {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    align-items: center;
-  }
-  .profile {
-    width: 80%;
-  }
+.footer-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  width: 200px;
 }
